--- a/src/components/Projekty_cmpnt.astro
+++ b/src/components/Projekty_cmpnt.astro
@@ -67,6 +67,7 @@ import { ViewTransitions } from "astro:transitions";
                 </ul>
             </div>
         </div>
+        <div class="projekt-1-down-bg"></div>
     </div>
     <div class="projekt-2-container">
         <div class="projekt-2-up">
@@ -259,6 +260,13 @@ import { ViewTransitions } from "astro:transitions";
         background: var(--gradient1, radial-gradient(74.1% 76.06% at 32.04% 109.51%, rgba(195, 0, 192, 0.30) 19%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(143.37% 142.45% at 48.54% 50%, rgba(142, 19, 243, 0.59) 0%, rgba(47, 152, 244, 0.00) 100%), rgba(47, 152, 244, 0.00));
         align-content: center;
         display: flex;
+    }
+
+    .projekt-1-down-bg {
+        grid-row: 2/3;
+        grid-column: 1/3;
+        z-index: -5;
+        background-color: white;
     }
 
     h2 {
