--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,8 +1,10 @@
 ---
 import About_cmpnt from '../../components/en_components/About_cmpnt.astro';
 import Layout from '../../layouts/Layout.astro';
+import Footer from '../../components/en_components/Footer.astro';
 ---
 
 <Layout title="O nas | Fantastica">
 	<About_cmpnt />
+	<Footer animate:persist/>
 </Layout>
