--- a/src/pages/en/listen.astro
+++ b/src/pages/en/listen.astro
@@ -1,8 +1,10 @@
 ---
 import PosluchajCmpnt from '../../components/en_components/Posluchaj_cmpnt.astro';
 import Layout from '../../layouts/Layout.astro';
+import Footer from '../../components/en_components/Footer.astro';
 ---
 
 <Layout>
 	<PosluchajCmpnt />
+	<Footer animate:persist/>
 </Layout>
