--- a/src/pages/o-nas.astro
+++ b/src/pages/o-nas.astro
@@ -1,8 +1,10 @@
 ---
 import About_cmpnt from '../components/About_cmpnt.astro';
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/Footer.astro'
 ---
 
 <Layout title="O nas | Fantastica">
 	<About_cmpnt />
+	<Footer animate:persist/>
 </Layout>
