--- a/src/pages/posluchaj.astro
+++ b/src/pages/posluchaj.astro
@@ -1,8 +1,10 @@
 ---
 import PosluchajCmpnt from '../components/Posluchaj_cmpnt.astro';
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
 	<PosluchajCmpnt />
+	<Footer animate:persist/>
 </Layout>
