Footer, nieklikalne linki

--- a/src/components/en_components/Footer.astro
+++ b/src/components/en_components/Footer.astro
@@ -39,6 +39,7 @@ import ytIcon from '../../assets/yt_icon.svg';
     #footerlol {
         height:  calc(42vh + 103px);
         width: 100%;
+        pointer-events: none
     }
     
     footer {
