--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,6 +41,7 @@ import ytIcon from '../assets/yt_icon.svg';
     #footerlol {
         height:  calc(42vh + 103px);
         width: 100%;
+        pointer-events: none
     }
     
     footer {
