--- a/src/components/Glowna_cmpnt3.astro
+++ b/src/components/Glowna_cmpnt3.astro
@@ -63,6 +63,7 @@ import vidoo from '../assets/fantastica-vid.mp4';
 		width: 100%;
 		height: 100vh;
 		justify-content: center;
+		pointer-events: none
 	}
 		#background-that-fades {
 			display: flex;
@@ -70,6 +71,7 @@ import vidoo from '../assets/fantastica-vid.mp4';
 			position: absolute;
 			width: 100%;
 			height: 100%;
+			pointer-events: none
 		}
 			.background {
 				position: absolute;
@@ -77,6 +79,7 @@ import vidoo from '../assets/fantastica-vid.mp4';
 				z-index: -2;
 				width: 100%;
 				object-fit: cover;
+				pointer-events: none
 			}
 
 			.falanding {
@@ -84,6 +87,7 @@ import vidoo from '../assets/fantastica-vid.mp4';
 				z-index: -1;
 				bottom: 0;
 				height: 76vh;
+				pointer-events: none
 			}
 
 		#fantastica-bg-vid {
