--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -324,7 +324,7 @@ import { ViewTransitions } from "astro:transitions";
         .albumy-headline {
             grid-template-rows: 1fr 1fr;
             grid-template-columns: 100vw;
-            margin-top: 11vw;
+            padding-top: 11vw;
         }
         .albumy-headline-text {
             grid-row: 1/2;
