--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -445,7 +445,7 @@ import { ViewTransitions } from "astro:transitions";
         grid-column: 1 / 12;
         grid-row: 6 / 7;
         display: grid;
-        grid-template-columns: calc(12vw - 110px) 1fr calc(13vw - 110px) ;
+        grid-template-columns: 0 1fr calc(13vw - 110px) ;
         grid-template-rows: 14vh 1fr 10vh;
         background: #DD587C;
     }
@@ -591,7 +591,7 @@ import { ViewTransitions } from "astro:transitions";
 /* Mobilna O nas */
 @media screen and (max-width: 800px) {
     .about-container {
-        grid-template-rows: 1fr auto 1fr 780px 360vw auto auto auto;
+        grid-template-rows: auto auto 1fr 780px 360vw auto auto auto;
     }
     .about-content-1 {
         flex-direction: column;    
