--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -453,7 +453,7 @@ import { ViewTransitions } from "astro:transitions";
         grid-column: 1 / 12;
         grid-row: 6 / 7;
         display: grid;
-        grid-template-columns: calc(12vw - 110px) 1fr calc(13vw - 110px) ;
+        grid-template-columns: 0 1fr calc(13vw - 110px) ;
         grid-template-rows: 14vh 1fr 10vh;
         background: #DD587C;
     }
@@ -527,7 +527,7 @@ import { ViewTransitions } from "astro:transitions";
         display: grid;
         grid-template-columns: auto 2fr;
         padding-top: 21vh;
-        gap: 8vw;
+        gap: 75px;
         padding-right: calc(32vw - 350px);
         background: linear-gradient(180deg, #DD587C 0%, #ECDAE2 100%);
     }
@@ -597,7 +597,7 @@ import { ViewTransitions } from "astro:transitions";
 /* Mobilna O nas */
 @media screen and (max-width: 800px) {
     .about-container {
-        grid-template-rows: 1fr auto 1fr 780px 360vw auto auto auto;
+        grid-template-rows: auto auto 1fr 780px 360vw auto auto auto;
     }
     .about-content-1 {
         flex-direction: column;    
