Glowna: kalendarz tlo fix for phone

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -519,7 +519,7 @@ import { ViewTransitions } from "astro:transitions";
         display: grid;
         grid-template-columns: auto 2fr;
         padding-top: 21vh;
-        gap: 8vw;
+        gap: 75px;
         padding-right: calc(32vw - 350px);
         background: linear-gradient(180deg, #DD587C 0%, #ECDAE2 100%);
     }
