--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -232,6 +232,7 @@ import Lenis from 'lenis';
 	
 		#kalendarz-container {
 			background: url(../../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
+			background-size: cover;		
 		}
 
 		.wydarzenia {
