--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -221,6 +221,7 @@ import Footer from '../components/Footer.astro'
 	
 		#kalendarz-container {
 			background: url(../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
+			background-size: cover;
 		}
 
 		.wydarzenia {
