--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -304,7 +304,7 @@ import Lenis from 'lenis';
 				grid-template-rows: 110vh 72% 100vh 1fr;
 			}
 			#main-readable-portion {
-				width: 101vw;
+				width: -webkit-fill-available;
 				grid-template-rows: 10vh 1250px 82vh 1360px 40vh 42vh;
 			}
 
