--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -293,7 +293,7 @@ import Footer from '../components/Footer.astro'
 				grid-template-rows: 110vh 72% 100vh 1fr;
 			}
 			#main-readable-portion {
-				width: 101vw;
+				width: -webkit-fill-available;
 				grid-template-rows: 10vh 1250px 82vh 1360px 40vh 42vh;
 			}
 
