--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,8 +57,8 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 		scroll-behavior: smooth;
 		margin: 0;
 		width: 100%;
-		height: 100%;
-		overflow: visible;
+		height: auto;
+		overflow-x: clip;
 	}
 
 </style>
