--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -410,7 +410,7 @@ import Footer from '../components/Footer.astro'
 		
 		// Register ScrollTrigger plugin
 		gsap.registerPlugin(ScrollTrigger);
-
+		ScrollTrigger.normalizeScroll(true);
 
 		const tl = gsap.timeline({
 
