Layout: mini fix

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,10 +53,10 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 	html,
 	body {
 		/* TODO - experimental font smoothing */
-		-webkit-font-smoothing: antialiased;
+		-webkit-font-smoothisng: antialiased;
 		scroll-behavior: smooth;
 		margin: 0;
-		width: 100%;
+		width: 100vw;
 		height: auto;
 		overflow-x: clip;
 	}
