Layout: mini fix2

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ import Footer from '../components/Footer.astro'
 	<style>
 		#fantastica-glowna {
 			display: grid;
-			width: 100%;
+			width: 100vw;
 			/* place-items: center; */
 			grid-template-rows: 150vh 1fr;
 
@@ -98,7 +98,7 @@ import Footer from '../components/Footer.astro'
 			display: grid;
 			grid-template-columns: 1fr 82vw 2fr;
 			grid-template-rows: 10vh 1250px 82vh 108vh 1fr;
-			width: 100%;
+			width: 100vw;
 			height: 2000px;
 			background-color: rgba(241, 239, 239, 0.97);
 			backdrop-filter: blur(15px);
@@ -249,7 +249,7 @@ import Footer from '../components/Footer.astro'
 		#second-quote-main > div {
 			display: flex;
 			flex-direction: column;
-			padding: 1vw 1vw 3vw 4vw;
+			padding: 1vw 2vw 3vw 4vw;
 			background-color: #D9EDFF;
 			background-image: url('../assets/quote-second-gdnt.svg');
 			background-size: cover;
