Glowna: scroll fix

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -30,7 +30,7 @@ import Lenis from 'lenis';
 				<div id="o-nas">
 					<div id="o-nas-left">
 						<h2 style="font-family: Gilda Display;">WHO<br>ARE WE?</h2>
-						<Image src={kimjestesmyPhoto} alt="Who are we photo" />
+						<Image src={kimjestesmyPhoto} alt="Who are we" />
 					</div>
 					<div id="o-nas-right">
 						<div id="o-nas-right-tekscik">
