Glowna: proba naprawienia bg kalendarz

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -235,6 +235,7 @@ import Lenis from 'lenis';
 		#kalendarz-container {
 			background: url(../../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
 			background-size: cover;		
+			background-size: auto 100%;
 		}
 
 		.wydarzenia {
