Glowna: proba naprawienia bg kalendarz

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -233,8 +233,8 @@ import Lenis from 'lenis';
 		}
 	
 		#kalendarz-container {
-			background: url(../../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;	
-			background-size: auto 100%;
+			background: url(../../assets/tlo-kalendarz.png) lightgray 50%;	
+			background-size: cover;
 		}
 
 		.wydarzenia {
