Glowna: proba naprawienia bg kalendarz

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -233,7 +233,7 @@ import Lenis from 'lenis';
 		}
 	
 		#kalendarz-container {
-			background: url(../../assets/tlo-kalendarz.png) lightgray 50%;	
+			background: url(../../assets/tlo-kalendarz.png) lightgray;	
 			background-size: cover;
 		}
 
