Glowna: proba naprawienia bg kalendarz

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -222,7 +222,7 @@ import Footer from '../components/Footer.astro'
 	
 		#kalendarz-container {
 			background: url(../assets/tlo-kalendarz.png) lightgray;
-			background-size: cover;
+			background-size: 1000px 2000px;
 		}
 
 		.wydarzenia {
