--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -376,7 +376,7 @@ import Footer from '../components/Footer.astro'
 				font-size: 2.7rem;
 			}
 			#kalendarz-container {
-				height: -webkit-fill-available;
+				height: auto;
 			}
 			#kalendarz-container > div {
 				height: -webkit-fill-available;
