Glowna: proba naprawienia bg kalendarz

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -387,7 +387,7 @@ import Lenis from 'lenis';
 				font-size: 2.7rem;
 			}
 			#kalendarz-container {
-				height: -webkit-fill-available;
+				height: auto;
 			}
 			#kalendarz-container > div {
 				height: -webkit-fill-available;
