--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -221,8 +221,8 @@ import Footer from '../components/Footer.astro'
 		}
 	
 		#kalendarz-container {
-			background: url(../assets/tlo-kalendarz.png) lightgray;
-			background-size: 1000px 2000px;
+			background: url(../assets/tlo-kalendarz.png) lightgray 50% / no-repeat;
+			background-size: cover;
 		}
 
 		.wydarzenia {
