Glowna: proba naprawienia bg kalendarz

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -125,8 +125,8 @@ const homeLink = isEnglish ? "/en" : "/";
       z-index: 3000;
     }
     #logo {
-      padding-top: 2vh;
-      padding-left: 3.7vh;
+      margin-top: 2vh;
+      margin-left: 3.7vh;
       width: 9vh;
     }
     #lang-switch-button1 {
