Glowna: proba naprawienia bg kalendarz

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -233,7 +233,7 @@ import Lenis from 'lenis';
 		}
 	
 		#kalendarz-container {
-			background: lightgray url(../assets/tlo-kalendarz.png) 50% / cover no-repeat;
+			background: lightgray url(../../assets/tlo-kalendarz.png) 50% / cover no-repeat;
 		}
 
 		.wydarzenia {
