Glowna: proba naprawienia bg kalendarz

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,6 +59,7 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 		width: 100vw;
 		height: auto;
 		overflow-x: clip;
+		z-index: -9999;
 	}
 
 </style>
