Footer: na okolo naprawa nieklikajacego footera przez body zaslaniajace

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -432,6 +432,8 @@ import Footer from '../components/Footer.astro'
 			},
 
 			})
+			// To dziala zeby od poczatku do konca zdjecia przejechac
+			// tl.to("#first-photo-containter", {backgroundPositionY: "-100%"}, 0)
 			tl.to("#first-photo-containter", {backgroundPositionY: 10}, 0)
 			//or with multiple refs
 		}
