--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,9 +57,8 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 		scroll-behavior: smooth;
 		margin: 0;
 		width: 100vw;
-		height: auto;
+		height: 80%;
 		overflow-x: clip;
-		z-index: -9999;
 	}
 
 </style>
