--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -6,3 +6,10 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<KontaktCmpnt />
 </Layout>
+
+<style>
+	html,
+	body {
+		height: 100%;
+	}
+</style>
