Glowna: dodaje smooth scrolling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 	body {
 		/* TODO - experimental font smoothing */
 		-webkit-font-smoothing: antialiased;
-		scroll-behavior: smooth;
+		/* scroll-behavior: smooth; */
 		margin: 0;
 		width: 100vw;
 		height: 80%;
