--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import kalendarzPicMain from '../assets/kalendarz-pic-main.png'
 import secondPhotoMain from '../assets/second-photo-main.png'
 import Footer from '../components/Footer.astro'
 ---
-<script>
+<!-- <script>
 	import Lenis from "lenis"
 
     const lenis = new Lenis()
@@ -19,7 +19,7 @@ import Footer from '../components/Footer.astro'
     }
     requestAnimationFrame(raf)
 		
-</script>
+</script> -->
 
 <Layout>
 	<div id="fantastica-glowna">
